--- a/JQuery/Excel Table/excel-bootstrap-table-filter-style.html
+++ b/JQuery/Excel Table/excel-bootstrap-table-filter-style.html
@@ -18,7 +18,7 @@
       <tr>
         <th>Firstname</th>
         <th>Lastname</th>
-        <th>Email</th>
+        <th class = "no-filter">Email</th>
       </tr>
     </thead>
     <tbody>
