--- a/JavaScript/Tree Grid/tree-grid.html
+++ b/JavaScript/Tree Grid/tree-grid.html
@@ -11,6 +11,8 @@
 
   <link rel="stylesheet" href="treegrid/css/jquery.treegrid.css">
   <script src="treegrid/js/jquery.treegrid.js"></script> 
+  <script src="treegrid/js/jquery.cookie.js"></script> 
+
 
 </head>
 
@@ -19,6 +21,10 @@
     $('.tree').treegrid();               
   });
 </script>
+
+
+
+
 <body>
 
 <table class="table tree table-striped">  
